# mobile-invent

./: .gitignore
backend/: itreqs.json  main.py  pyproject.toml
backend/core/: settings.py  urls.py
backend/mobile_invent/: apps.py  urls.py  views.py
backend/mobile_invent/services/: action_handler.py  handler.py  mars_api.py  send.py  takeback.py
backend/mobile_invent/services/action_handlers/: __init__.py  giveaway.py  handler.py  send.py  takeback.py
backend/mobile_invent/services/blanks/: worddocument.py
backend/mobile_invent/services/blanks/source/giveaway/: ipad.docx  laptop docking station.docx  laptop.docx  nokia.docx
backend/mobile_invent/services/blanks/source/takeback/: ipad.docx  laptop.docx  nokia.docx
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx
frontend/src/mobile_invent/: context.ts  datatypes.ts  logic.ts  page.tsx
frontend/src/mobile_invent/components/: buttonsGrp.tsx  card.tsx  list.tsx  search.tsx  select.tsx
frontend/src/mobile_invent/components/list/: list.tsx
frontend/src/pages/mobile_invent/: context.ts  datatypes.ts  page.tsx  search.ts
frontend/src/pages/mobile_invent/components/: buttonsGrp.tsx  card.tsx  errors.tsx  search.tsx  select.tsx
frontend/src/pages/mobile_invent/components/list/: list.tsx
