[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Inbasu <just.me.juncy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
pydantic = "^2.10.3"
python-dotenv = "^1.0.1"
aiohttp = "^3.11.10"
django-cors-headers = "^4.6.0"
requests = "^2.32.3"
python-docx = "^1.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
